--- a/add.html
+++ b/add.html
@@ -11,6 +11,9 @@
     <script src="https://kit.fontawesome.com/4d129299c7.js"></script>
   </head>
   <body>
+    <audio class="audio">
+      <source src="./sound/wrong.mp3" type="audio/mp3" />
+    </audio>
     <header>
       <div class="container">
         <nav>
