--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </header>
 
-    <!--------------------- Quiz Section ------------------->
+    <!--------------------- Model Section ------------------->
 
     <div class="model-input">
       <div class="model-content">
@@ -63,6 +63,8 @@
         </form>
       </div>
     </div>
+
+    <!--------------------- Quiz Section ------------------->
 
     <section class="hero-section">
       <div class="container">
