--- a/multiplication.html
+++ b/multiplication.html
@@ -58,8 +58,8 @@
             <h1 id="num1" style="color: #fe4a49">1</h1>
             <h1 style="color: #2ab7ca">*</h1>
             <h1 id="num2" style="color: #fed766">1</h1>
-            <h1 style="color: #fe4a49">=</h1>
-            <h1 style="color: gray">?</h1>
+            <h1 style="color: gray">=</h1>
+            <h1 style="color: #fe4a49">?</h1>
           </div>
           <div class="answer-container">
             <h1 id="option1">1</h1>
