--- a/add.html
+++ b/add.html
@@ -42,6 +42,10 @@
             <li class="nav-item">
               <a href="divide.html" class="nav-link">Division</a>
             </li>
+
+            <li class="nav-item">
+              <a href="table.html" class="nav-link">Tables</a>
+            </li>
           </ul>
         </nav>
       </div>
