--- a/multiplication.html
+++ b/multiplication.html
@@ -44,6 +44,10 @@
             <li class="nav-item">
               <a href="divide.html" class="nav-link">Division</a>
             </li>
+
+            <li class="nav-item">
+              <a href="table.html" class="nav-link">Tables</a>
+            </li>
           </ul>
         </nav>
       </div>
